test/fail/unused-parameter.mo
func test(param:Int) {};

let _ = switch (42,) { case (param) param};
